--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">???????</a>
+                    <a href="#" class="lista-menu__link">serviços</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">????????</a>
+                    <a href="#" class="lista-menu__link">redes sociais</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">??????????</a>
+                    <a href="#" class="lista-menu__link">sobre</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
