--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>?????????</title>
+    <title>Pedro Henrique</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,22 +17,22 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">serviços</a>
+                    <a href="serviços.html" class="lista-menu__link">serviços</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">redes sociais</a>
+                    <a href="redessociais.html" class="lista-menu__link">redes sociais</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">sobre</a>
+                    <a href="serviços.html" class="lista-menu__link">sobre</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         </div> 
-        <!-- ???????? -->
+        <!-- Pedro henrique -->
         <div class="container">
-            <!-- ???????? -->
+            <!-- Pedro Henrique -->
         </div>
     </header>
-    
+    <img src="imagens/PEDRO HENRIQUE.png" alt=""> 
 </body>
 </html>
