--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             <!-- Pedro Henrique -->
         </div>
     </header>
-    <img src="imagens/PEDRO HENRIQUE.png" alt=""> 
+    <img src="img/PEDRO HENRIQUE.png" alt=""> 
 </body>
 </html>
