--- a/sobre.html
+++ b/sobre.html
@@ -17,13 +17,13 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">serviços</a>
+                    <a href="index.html" class="lista-menu__link">inicio</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">redes sociais</a>
+                    <a href="serviços.html" class="lista-menu__link">serviços</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">sobre</a>
+                    <a href="redessociais.html" class="lista-menu__link">redes sociais</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
@@ -33,6 +33,6 @@
             <!-- Pedro Henrique -->
         </div>
     </header>
-    <img src="imagens/PEDRO HENRIQUE.png" alt=""> 
+    <img src="img/sobre.png" alt=""> 
 </body>
 </html>
