--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <img src="img/Logo.svg" alt="Logo da Alurabooks" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+        </div> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,40 +25,16 @@
                 <a class="nav-link" href="sobre.html">SOBRE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="redessociais.html">REDES SOCIAIS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="serviços.html" >SERVIÇOS</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-     <header class="cabeçalho">
-        <div class="container">
-            <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-            </label>
-            <ul class="lista-menu">
-                <li class="lista-menu__titulo">Categorias</li>
-                <li class="lista-menu__item">
-                    <a href="serviços.html" class="lista-menu__link">serviços</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="redessociais.html" class="lista-menu__link">redes sociais</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="serviços.html" class="lista-menu__link">sobre</a>
-                </li>
-            </ul>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-        </div> 
-        <!-- Pedro henrique -->
-        <div class="container">
-            <!-- Pedro Henrique -->
-        </div>
-    </header>
+    
   <p><h1>SOBRE PEDRO</h1></p>
   <div class="titulo_sobre"></div>
     <img src="img/PEDRO HENRIQUE.png" alt=""> 
