--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#"></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sobre.html">SOBRE</a>
@@ -34,10 +34,15 @@
           </div>
         </div>
       </nav>
-    
-  <p><h1>SOBRE PEDRO</h1></p>
+
   <div class="titulo_sobre"></div>
-    <img src="img/PEDRO HENRIQUE.png" alt=""> 
+    <img src="img/PEDRO HENRIQUE.png" alt="">
+
+    <h1 class="titulo_index">Tudo sobre o Pedro nessse site</h1>
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
