--- a/redessociais.html
+++ b/redessociais.html
@@ -6,33 +6,36 @@
     <title>Pedro Henrique</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-     <header class="cabeçalho">
-        <div class="container">
-            <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-            </label>
-            <ul class="lista-menu">
-                <li class="lista-menu__titulo">Categorias</li>
-                <li class="lista-menu__item">
-                    <a href="index.html" class="lista-menu__link">inicio</a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <img src="img/Logo.svg" alt="Logo da Alurabooks" >
+          <div class="container-fluid">
+          </div> 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"></a>
                 </li>
-                <li class="lista-menu__item">
-                    <a href="serviços.html" class="lista-menu__link">serviços</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INICIO</a>
                 </li>
-                <li class="lista-menu__item">
-                    <a href="sobre.html" class="lista-menu__link">sobre</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="sobre.html">SOBRE</a>
                 </li>
-            </ul>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-        </div> 
-        <!-- Pedro henrique -->
-        <div class="container">
-            <!-- Pedro Henrique -->
-        </div>
-    </header>
+                <li class="nav-item">
+                  <a class="nav-link" href="serviços.html" >SERVIÇOS</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     <img src="img/REDES SOCIAIS.png" alt=""> 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>   
 </body>
 </html>
